--- a/css/list-of-media-queries.css
+++ b/css/list-of-media-queries.css
@@ -2,122 +2,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Saira+Condensed:wght@100;200;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@100&display=swap');
 
-@media only screen and (min-device-width: 337px) and  (max-device-height: 667px){
-    .section-one {
-        margin-bottom: 24px !important;
-    }
-    .section-two {
-        margin-top: 48px !important;
-        width: 98vw !important;
-        align-items: center !important;
-        justify-content: center !important;
-    }
+/* Para telas mmaiores
+
+@media (min-width: 768px) {
+
+    
+
 }
+*/
 
-@media only screen and (min-device-width: 300px) and  (max-device-width: 1027px) {
-    .apresentation-Ola {
-        margin: 16px 16px 0 16px !important;
-        font-size: 36px !important;
+
+/* Para telas menores*/
+
+@media (max-width: 1024px) {
+
+    .apresentation-title {
         text-align: center !important;
     }
 
-    .apresentation-eusou {
+    .apresentation-subTitle {
+        font-size: 60px !important;
         text-align: center !important;
-        font-size: 50px !important;
-        margin: 16px 16px 0 35px !important;
     }
 
     .apresentation-about {
-        font-size: 14px !important;
-        margin: 24x 16px 24px 16px !important;
-        width: auto !important;
-        text-align: center  !important;
+        text-align: center !important;
+        width: 22em !important;
     }
 
-    .section-one {
-        width: 98vw  !important;
+    .container-buttom {
+        display: flex;
+        margin: 10% 0% 10% 0% !important;
         flex-direction: column !important;
         justify-content: center !important;
+        align-items: center !important;
     }
 
-    .apresentation-buttom {
-        width: auto  !important;
-        margin: 24px 16px 24px 16px  !important;
-    }
-
-    .apresentation-buttom:hover {
-        transition: all 1s !important;
-        transform: translateY(-10px) !important;
-    }
-    
     .photo{
-        width: 100% !important;
-        margin: 0 16px !important;
-    }
-    
-
-    .section-two {
-        margin-top: 48px !important;
-        width: 98vw !important;
-        align-items: center !important;
-        justify-content: center !important;
+        width: 90% !important;
     }
 
-    .experiencia  {
-        margin: 48px 16px 16px 16px !important;
-        display: flex !important;
-        flex-flow: row wrap !important;
-        width: 100% !important;
-        justify-content: center !important;
+    .container-linkedin {
+        margin-top: 48px;
+    }
+
+    .linkedin{
+        width: 150px !important;
+    }
+
+    .two-container1 {
+
         align-items: center !important;
     }
 
-    .section-tree {
-        width: 98vw  !important;
-        align-items: flex-start !important;
+    .two-container2 {
+        align-items: center !important;
     }
 
-    .amostra {
-        margin: 24px 0 0 0 !important;
-        display: flex  !important;
-        flex-flow: row wrap  !important;
-        align-items: center  !important;
-    }
-
-    .amostra-title {
-        font-family: 'Montserrat', sans-serif !important;
-        font-weight: 500 !important;
-        font-size: 16px !important;
-        margin: 24px 16px 0 16px !important;
-        width: auto !important;
-        height: auto !important;
+    .two-title {
+        margin: 10% 0% 10% 0% !important;
         text-align: center !important;
     }
 
-    .amostra-title1 {
-        font-size: 42px !important;
-        margin: 16px 16px 16px 16px !important;
-        color: #212121 !important;
-        line-height: 65px !important;
-        font-style: normal !important;
-        font-weight: 600 !important;
+    .two-subTitle {
+        margin: 16% 16% 5% 16% !important;
         text-align: center !important;
-        font-family: 'Saira Condensed', sans-serif !important;
+        width: 25em !important;
     }
 
-    .design {
-        width: 100% !important;
-        margin: 25px 16px 0 16px !important;
-        align-items: start !important;
+    .exper {
+        align-items: center !important;
+
     }
 
-    .mar1 {
-        margin: 80px 0 0 0px !important;
-        font-size: 68px !important;
+    .exper-title {
+        text-align: center !important;
     }
 
-    .mar2 {
-        margin: 0px 0 0 0px !important;
-        font-size: 68px !important;
+    .exper-card {
+        gap: 16px !important;
+        width: 300px !important;
+        height: 100px !important;
     }
+
 }
