--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Saira+Condensed:wght@100;200;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Krub:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krub:wght@500&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Krub:wght@200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;800&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Reenie+Beanie&family=Saira+Condensed:wght@100;200;400;500;600;700;800&display=swap');
 @import url('list-of-media-queries.css') (max-width: 1024px);
 
 :root {
@@ -13,6 +14,7 @@
     --primary-color: #9302FC;
     --secondary-color: #bc4dfc;
     --footer-color: #0F8BFA;
+    --footer-color2: #FFB800;
 }
 
 * {
@@ -89,7 +91,7 @@ a {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-style: normal;
-    font-weight: 800;
+    font-weight: 400;
     line-height: normal;
     width: 500px;
 }
@@ -107,8 +109,8 @@ a {
     width: 150px;
     height: 38px;
     display: flex;
-    font-size: 16px;
-    font-weight: 600;
+    font-size: 15px;
+    font-weight: 400;
     text-align: center;
     font-style: normal;
     line-height: normal;
@@ -190,7 +192,7 @@ a {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-style: normal;
-    font-weight: 800;
+    font-weight: 400;
     line-height: normal;
     display: flex;
     width: 500px;
@@ -330,7 +332,7 @@ a {
     line-height: normal;
 }
 .none{
-    
+
     display: none;
 }
 
@@ -372,7 +374,7 @@ a {
     flex-direction: row !important;
     flex-wrap: wrap !important;
     justify-content: space-between;
-    background-color: var(--footer-color) !important;
+    background-color: var(--footer-color2) !important;
 
 }
 
@@ -383,7 +385,7 @@ a {
 }
 
 .four-subTitle {
-    color: var(--color-white);
+    color: var(--text-color);
     font-family: 'Open San', sans-serif;
     font-size: 18px;
     font-style: normal;
@@ -408,7 +410,7 @@ a {
     align-items: center;
     flex-shrink: 0;
     border-radius: 10px;
-    background: #FFF;
+    background: var(--text-color);
 }
 
 
@@ -416,11 +418,11 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--color-white) !important;
+    color: var(--text-color) !important;
     font-family: 'Open San', sans-serif;
-    font-size: 18px;
+    font-size: 24px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: normal;
     text-decoration: none !important;
 }
@@ -436,7 +438,7 @@ a {
 .four-title {
     font-size: 70px;
     margin: 1rem 0 2rem 0 !important;
-    color: var(--color-white);
+    color: var(--text-color);
     line-height: 65px;
     font-style: normal;
     font-weight: 600 !important;
