--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,34 @@ a {
     box-shadow: 0px 6px 4px 0px rgba(200, 198, 198, 0.25);
 }
 
+.buttom_Portf {
+    width: 150px;
+    height: 38px;
+    display: flex;
+    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+    font-style: normal;
+    line-height: normal;
+    align-items: center;
+    border-radius: 15px;
+    text-decoration: none;
+    justify-content: center;
+    padding: 5px;
+    color: var(--color-white);
+    transition: all 1s !important;
+    background: var(--primary-color);
+    font-family: 'Poppins', sans-serif;
+    box-shadow: 0px 6px 4px 0px rgba(200, 198, 198, 0.25);
+}
+
 .buttom:hover {
+    color: var(--color-white);
+    transition: all 1s !important;
+    transform: translateY(-10px) !important;
+    background: linear-gradient(45deg, --primary-color, --secondary-color);
+}
+.buttom_Portf:hover {
     color: var(--color-white);
     transition: all 1s !important;
     transform: translateY(-10px) !important;
@@ -313,20 +340,25 @@ a {
     font-family: 'Saira Condensed', sans-serif;
 }
 
+.figma{
+    margin-left: 24px;
+}
+
 .three-projetos {
     padding-top: 48px;
+    margin-bottom: 48px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 113px;
+    /*gap: 113px;*/
 }
 
 
 .projetos-title {
     color: var(--text-color);
     font-family: 'Saira Condensed', sans-serif;
-    font-size: 32px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -355,7 +387,8 @@ a {
 .projetos-img {
     width: 377px;
     height: 252px;
-    color: #D9D9D9;
+    display: flex !important;
+    justify-content: flex-start;
 }
 
 .projetos-text {
